# timepoint-flash

./: .dockerignore  .env.dev.example  .env.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF 2.md  HANDOFF 3.md  LICENSE  NOTICE  QUICKSTART.md  README 3.md  README.md  TESTING.md  alembic.ini  demo.sh  docker-compose.dev.yml  docker-compose.yml  docs.json  eval.sh  init.sh  plan.md  pyproject.toml  quickstart.sh  railway.json  render.yaml  requirements.txt  run.sh  setup.sh  test-demo 2.sh  test-demo 3.sh  test-demo 4.sh  test-demo.sh  test.sh  test_timepoint.db-shm  test_timepoint.db-wal  (+1 more)
.claude/: settings.local 2.json  settings.local 4.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: flash-execution-pr.md
.github/workflows/: test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20241130_0001_initial_schema.py  20241204_0002_add_chat_sessions.py  20250206_0003_add_grounding_moment_columns.py  20251027_1900_32c5060e05a7_change_image_url_columns_to_text.py  20251027_2326_c8aefdbf0291_add_is_fictional_to_timepoints.py  20251126_1959_a82782b078f8_add_ip_based_rate_limiting.py  20260209_0004_add_blob_storage_columns.py  20260209_0005_add_auth_and_credits.py  20260213_0006_add_model_tracking_columns.py  20260216_0007_add_visibility_column.py  20260216_0008_add_billing_transaction_types.py  20260217_0009_add_user_external_id.py  20260227_0010_tdf_canonical.py
app/: __init__.py  cli.py  config.py  database.py  feature_flags.py  main.py  mcp_server.py  models.py  models_auth.py  schemas.py
app/agents/: __init__.py  base.py  camera.py  character_bio.py  character_chat.py  character_identification.py  characters.py  critique.py  dialog.py  dialog_extension.py  entity_grounding.py  graph.py  graph_orchestrator.py  grounding.py  image_gen.py  image_prompt.py  image_prompt_optimizer.py  judge.py  moment.py  quick_sim.py  scene.py  scene_builder.py  survey.py  timeline.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  content.py  credits.py  entities.py  eval.py  find_money.py  interactions 2.py  interactions.py  models.py  reground.py  tdf.py  temporal.py  timepoints.py  users.py
app/auth/: apple.py  credits.py  dependencies.py  google.py  jwt_handler.py  schemas.py
app/core/: __init__.py  background_grounding.py  entity_client.py  historical_validation.py  llm_router.py  model_capabilities.py  model_policy.py  model_registry.py  pipeline.py  rate_limiter.py  temporal.py
app/core/providers/: __init__.py  base.py  google.py  openrouter.py  stability.py
app/eval/: __init__.py  runner.py  schemas.py
app/middleware/: __init__.py  bearer_auth.py
app/prompts/: __init__.py  camera.py  character_bio.py  character_chat.py  character_identification.py  characters.py  dialog.py  graph.py  image_prompt.py  judge.py  moment.py  quick_sim.py  sanitize.py  scene.py  temporal_grounding.py  timeline.py
app/routers/: __init__.py  email.py  feed.py  gallery.py  timepoint.py
app/schemas/: __init__.py  camera.py  character_identification.py  characters.py  chat.py  dialog.py  dialog_arc.py  entity_types.py  graph.py  grounding_profile.py  image_prompt.py  judge.py  moment.py  quick_sim.py  scene.py  timeline.py
app/services/: __init__.py  billing.py  google_ai 2.py  google_ai.py  openrouter.py  openrouter_fallback.py  scene_graph.py
app/static/css/: style.css
app/storage/: __init__.py  config.py  index_html.py  manifest.py  naming.py  service.py
app/storage/backends/: __init__.py  base.py  cloud.py  local.py
app/templates/: base.html  demo.html  gallery.html  generate.html  viewer.html
app/utils/: rate_limiter.py
archive/: QUICKSTART-v1.md  README-v1.md  README.md  REFACTOR.md  VERIFICATION_CHECKLIST.md
autoresearch/: __init__.py  flash_autoresearch.py
docs/: AGENTS.md  API.md  DEPLOY.md  DEPLOYMENT.md  DOWNSTREAM_MODEL_CONTROL.md  DOWNSTREAM_NOTICE_2026-03-11.md  EVAL_ROADMAP.md  FIRST-TIME-SETUP.md  IOS_INTEGRATION.md  MODELS.md  STORAGE.md  TEMPORAL.md
docs/execution-prs/: PR-01-quick-sim-calibration-spine.md  PR-02-fail-closed-confidence-scoring.md  PR-03-quick-sim-grounding-pass.md  PR-04-model-slug-liveness-guard.md  PR-05-flash-to-pro-calibrated-handoff.md  PR-06-quick-sim-observability.md  PR-07-rank-stability-ci.md  README.md
examples/: README.md  curl_examples.sh  javascript_client.js  package.json  python_client.py  stream_progress.py
scripts/: init-db.sql  start.sh
tests/: __init__.py  conftest.py  test-demo.sh  test_auth.py  test_credits.py  test_e2e.py  test_e2e_agents.py  test_e2e_api.py  test_e2e_image.py  test_fast.py
tests/e2e/: __init__.py  test_pipeline_e2e.py
tests/fixtures/: mock_responses.py
tests/integration/: __init__.py  test_api_delete.py  test_api_models.py  test_api_streaming.py  test_api_temporal.py  test_api_timepoints.py  test_gateway_auth_middleware.py  test_stream_credit_deduction.py
tests/unit/: __init__.py  test_api_find_money.py  test_api_phase5.py  test_character_parallel.py  test_config.py  test_dialog_arc.py  test_entity_client.py  test_eval.py  test_main.py  test_mcp_server.py  test_model_registry.py  test_model_slug_liveness.py  test_model_tier.py  test_models.py  test_openrouter_anthropic_provider_order.py  test_openrouter_multikey.py  test_openrouter_native_routing.py  test_openrouter_prompt_caching.py  test_pipeline.py  test_prompt_sanitize.py  test_providers.py  test_rate_limiter.py  test_schemas.py  test_schemas_quick_sim_confidence.py  test_tdf.py  test_temporal.py  test_temporal_grounding.py  test_visibility.py
tests/utils/: __init__.py  llm_judge.py  retry.py  test_helpers.py
(+10 files in other folders)
