[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timepoint-flash"
version = "1.0.0"
description = "TIMEPOINT AI - Photorealistic Time Travel API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "sse-starlette==2.2.1",
    "sqlalchemy==2.0.39",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "mirascope>=1.25.0",
    "instructor>=1.8.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "logfire>=4.14.0",
    "google-generativeai>=0.8.0",
    "httpx==0.28.1",
    "openai>=1.0.0",
    "networkx==3.4.2",
    "numpy==2.2.2",
    "Pillow==11.1.0",
    "cairosvg==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "pytest-timeout==2.3.1",
    "faker==33.1.0",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "fast: Fast unit tests (no external API calls)",
    "e2e: End-to-end integration tests (requires API keys)",
    "slow: Slow tests (long-running operations)",
]
timeout = 300
addopts = "-v --tb=short --strict-markers --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
