[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timepoint-flash"
version = "2.2.0"
description = "AI-powered temporal simulation system"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "TIMEPOINT", email = "dev@timepoint.ai" }
]
keywords = ["ai", "llm", "temporal", "simulation", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # LLM integration
    "mirascope[google]>=1.25.0",
    "google-genai>=1.51.0",
    "httpx>=0.28.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
observability = [
    "logfire>=2.0.0",
]

# CLI entry point (uncomment when app/cli.py is implemented)
# [project.scripts]
# tp = "app.cli:cli"

[project.urls]
Homepage = "https://github.com/realityinspector/timepoint-flash"
Documentation = "https://github.com/realityinspector/timepoint-flash#readme"
Repository = "https://github.com/realityinspector/timepoint-flash"
Issues = "https://github.com/realityinspector/timepoint-flash/issues"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
exclude = [
    # Directories
    "alembic/",
    "tests/",
    "archive/",
    "images/",
    ".claude/",
    # Database files
    "*.db",
    "*.sqlite",
    "*.sqlite3",
    # Environment files
    ".env",
    ".env.*",
    # Duplicate files (macOS Finder copies)
    "*[[:space:]][0-9].*",
    "*[[:space:]][0-9]",
    "HANDOFF 2.md",
    "HANDOFF 3.md",
    "test-demo 2.sh",
    "test-demo 3.sh",
    "test-demo 4.sh",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "fast: Fast unit tests (no API calls)",
    "integration: Integration tests (may use mocked APIs)",
    "e2e: End-to-end tests (requires real API keys)",
    "requires_api: Tests that require API keys",
    "slow: Slow tests (long-running operations)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
